--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
   <ion-list [reorder]="shouldReorder" (ionItemReorder)="$event.applyTo(people)">
 
     <ion-item-sliding *ngFor="let person of people">
-      <ion-item (click)="pushPage(person)">
+      <ion-item>
         <ion-avatar item-left>
 
           <img [src]="person.picture.thumbnail" alt="">
