--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,16 +6,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-avatar item-left>
-        <img [src]="person.picture.thumbnail" alt="">
-      </ion-avatar>
-      {{person.name.first}} {{person.name.last}}
-      <ion-note item-right>{{person.phone}}</ion-note>
-    </ion-item>
-
-  </ion-list>
-
+<ion-content padding>
+  The world is your oyster.
+  <p>
+    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+  </p>
 </ion-content>
